--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,6 @@ body { /* start page text and background */
   margin-right: 220px;
 }  
 
- /* .main { /* start page move h1 and p down from top */
-  /* padding-top: 10px;
-  padding-left: 5px;
-  padding-right: 5px;
-} */ 
-
 .main { /* start page center h1, p, and button */
   text-align: center;  
   padding: 20px 5px auto 5px;
@@ -78,4 +72,29 @@ body { /* start page text and background */
     appearance: button;
 
     text-decoration: none;
+}
+
+.btn-choices { /* multiple choice answers */
+  background-color: yellow;
+  color: black;
+  padding: 5 px;
+  margin: 10px;
+  border-radius: 10px;
+  width: 50px;
+}  
+
+#textQuestions {
+  text-align: center;
+}
+
+#textChoices {
+  text-align: left;
+}
+
+#green1 {
+  background-color: green;
+}
+
+#red1 {
+  background-color: red;
 }
